commit 2. all works. Begin test with roles select

--- a/src/main/resources/templates/admin/edit.html
+++ b/src/main/resources/templates/admin/edit.html
@@ -31,6 +31,10 @@
     <input type="text" th:field="*{password}" id="password"/>
 
     <br>
+    <label for="role">Enter role:</label>
+    <input type="text" th:field="*{roles}" id="role"/>
+
+    <br>
     <input type="submit" value="Update"/>
 
 </form>
