--- a/src/main/resources/templates/admin/showById.html
+++ b/src/main/resources/templates/admin/showById.html
@@ -13,6 +13,7 @@
 <p th:text="${user.getAge()}">VALUE</p>
 <p th:text="${user.getId()}">VALUE</p>
 <p th:text="${user.getEmail()}">VALUE</p>
+<p th:text="${user.getAuthorities()}">VALUE</p>
 
 <br>
 <br>
