--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -1,37 +1,47 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-<html lang="en">
-
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Login Page</title>
+    <title>Login</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
+<body class="bg-light">
+<div class="container mt-5">
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            <div class="card shadow">
+                <div class="card-body">
+                    <h2 class="card-title text-center mb-4">Please sign in</h2>
 
-<body>
+                    <div th:if="${param.error}" class="alert alert-danger">
+                        Invalid username or password.
+                    </div>
 
-<form name="f" method="post" action="/process_login">
+                    <div th:if="${param.logout}" class="alert alert-success">
+                        You have been logged out.
+                    </div>
 
-    <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
+                    <form th:action="@{/process_login}" method="post">
+                        <!-- CSRF-токен -->
+<!--                        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />-->
 
-    <label for="username">ВВедите имя:</label>
-    <input type="text" name="username" id="username"/>
-    <br/>
-    <label for="password">ВВедите пароль:</label>
-    <input type="password" name="password" id="password"/>
-    <br/>
-    <input type="submit" value="Login"/>
+                        <div class="mb-3">
+                            <label for="username" class="form-label">Username </label>
+                            <input type="username" class="form-control" id="username" name="username" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="password" class="form-label">Password</label>
+                            <input type="password" class="form-control" id="password" name="password" required>
+                        </div>
+                        <button type="submit" class="btn btn-primary w-100">Sign in</button>
+                    </form>
 
-    <div th:if="${param.error}" style="color: red">
-        Неправильное имя или пароль
+                    <div class="mt-3 text-center">
+                        <a href="/auth/registration" class="btn btn-outline-secondary w-100">Registration</a>
+
+                </div>
+            </div>
+        </div>
     </div>
-
-</form>
-
-<br>
-<br>
-<br>
-
-<a href="/auth/registration">Registration</a>
-
+</div>
 </body>
 </html>
