--- a/src/main/resources/templates/auth/registration.html
+++ b/src/main/resources/templates/auth/registration.html
@@ -1,38 +1,45 @@
 <!DOCTYPE html>
-
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-<html lang="en">
-
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Registration</title>
+    <title>Add New User</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-
 <body>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="/admin">Admin Panel</a>
+    </div>
+</nav>
 
-<form th:method="POST" th:action="@{/auth/registration}" th:object="${myUser}">
-    <label for="username">Enter username:</label>
-    <input type="text" th:field="*{username}" id="username"/>
-
-    <br>
-    <label for="age">Enter age:</label>
-    <input type="text" th:field="*{age}" id="age"/>
-
-    <br>
-    <label for="email">Enter email:</label>
-    <input type="text" th:field="*{email}" id="email"/>
-
-    <br>
-    <label for="password">Enter password:</label>
-    <input type="password" th:field="*{password}" id="password"/>
-
-    <br>
-    <input type="submit" value="Create"/>
-</form>
-
-<form th:action="@{/logout}" method="post">
-    <input type="submit" value="logout"/>
-</form>
-
+<div class="container mt-5">
+    <h1 class="mb-4">Registration</h1>
+    <form th:action="@{/auth/registration}" th:object="${myUser}" method="post" class="card p-4">
+        <div class="mb-3">
+            <label for="username" class="form-label">Username</label>
+            <input type="text" th:field="*{username}" id="username" class="form-control">
+        </div>
+        <div class="mb-3">
+            <label for="age" class="form-label">Age</label>
+            <input type="number" th:field="*{age}" id="age" class="form-control">
+        </div>
+        <div class="mb-3">
+            <label for="email" class="form-label">Email</label>
+            <input type="email" th:field="*{email}" id="email" class="form-control">
+        </div>
+        <div class="mb-3">
+            <label for="password" class="form-label">Password</label>
+            <input type="password" th:field="*{password}" id="password" class="form-control">
+        </div>
+<!--        <div class="mb-3">-->
+<!--            <label for="role" class="form-label">Role</label>-->
+<!--            <select th:field="*{role}" id="role" class="form-control">-->
+<!--                <option value="ADMIN">ADMIN</option>-->
+<!--                <option value="USER">USER</option>-->
+<!--            </select>-->
+<!--        </div>-->
+        <button type="submit" class="btn btn-success">Add New User</button>
+    </form>
+</div>
 </body>
 </html>
+
