--- a/src/main/resources/templates/admin/showAll.html
+++ b/src/main/resources/templates/admin/showAll.html
@@ -12,9 +12,8 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                    <!-- Кнопка Logout -->
                     <form th:action="@{/logout}" method="post" class="d-inline">
-<!--                        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />-->
+                        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
                         <button type="submit" class="btn btn-danger">Logout</button>
                     </form>
                 </li>
@@ -61,35 +60,3 @@
 </div>
 </body>
 </html>
-
-
-<!--<!DOCTYPE html>-->
-<!--<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">-->
-<!--<html lang="en">-->
-
-<!--<head>-->
-<!--    <meta charset="UTF-8">-->
-<!--    <title>All users</title>-->
-<!--</head>-->
-
-<!--<body>-->
-
-<!--<div th:each="user : ${users}">-->
-<!--    <a th:href="@{/admin/{id}(id=${user.getId()})}"-->
-<!--       th:text="${user.getUsername() + ', ' + user.getAge() + ', ' + user.getEmail()}">user</a>-->
-<!--</div>-->
-
-<!--<br>-->
-
-<!--<hr/>-->
-
-<!--<br>-->
-<!--<br>-->
-<!--<br>-->
-
-<!--<form th:action="@{/logout}" method="post">-->
-<!--    <input type="submit" value="logout"/>-->
-<!--</form>-->
-
-<!--</body>-->
-<!--</html>-->
