--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -21,8 +21,7 @@
                     </div>
 
                     <form th:action="@{/process_login}" method="post">
-                        <!-- CSRF-токен -->
-<!--                        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />-->
+                        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
 
                         <div class="mb-3">
                             <label for="username" class="form-label">Username </label>
