--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -14,7 +14,7 @@
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
                     <form th:action="@{/logout}" method="post" class="d-inline">
-<!--                        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />-->
+                        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
                         <button type="submit" class="btn btn-danger">Logout</button>
                     </form>
                 </li>
@@ -60,76 +60,3 @@
 </div>
 </body>
 </html>
-
-
-<!--<!DOCTYPE html>-->
-<!--<html xmlns:th="http://www.thymeleaf.org">-->
-<!--<head>-->
-<!--    <title>User Information</title>-->
-<!--    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">-->
-<!--</head>-->
-<!--<body>-->
-<!--<nav class="navbar navbar-expand-lg navbar-dark bg-dark">-->
-<!--    <div class="container-fluid">-->
-<!--        <a class="navbar-brand" href="/">User Panel</a>-->
-<!--    </div>-->
-<!--</nav>-->
-
-<!--<div class="container mt-5">-->
-<!--    <h1 class="mb-4">User Information</h1>-->
-<!--    <div class="card p-4">-->
-<!--        <p><strong>ID:</strong> <span th:text="${user.id}"></span></p>-->
-<!--        <p><strong>Username:</strong> <span th:text="${user.username}"></span></p>-->
-<!--        <p><strong>Age:</strong> <span th:text="${user.age}"></span></p>-->
-<!--        <p><strong>Email:</strong> <span th:text="${user.email}"></span></p>-->
-<!--        <p><strong>Password:</strong> <span th:text="${user.password}"></span></p>-->
-<!--    </div>-->
-<!--</div>-->
-
-<!--<div class="container mt-5">-->
-<!--    <div class="row justify-content-center">-->
-<!--        <div class="col-md-6">-->
-<!--            <div class="card shadow">-->
-<!--                <div class="card-body">-->
-
-<!--                    <form th:action="@{/logout}" method="post">-->
-<!--                            <input type="submit" value="logout"/>-->
-<!--                    </form>-->
-
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </div>-->
-
-<!--</body>-->
-<!--</html>-->
-
-
-
-<!--<!DOCTYPE html>-->
-
-<!--<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">-->
-<!--<html lang="en">-->
-
-<!--<head>-->
-<!--    <meta charset="UTF-8">-->
-<!--    <title>It's you, my friend!</title>-->
-<!--</head>-->
-
-<!--<body>-->
-
-<!--<p th:text="${user.getUsername()}">VALUE</p>-->
-<!--<p th:text="${user.getAge()}">VALUE</p>-->
-<!--<p th:text="${user.getId()}">VALUE</p>-->
-<!--<p th:text="${user.getEmail()}">VALUE</p>-->
-
-<!--<br>-->
-<!--<br>-->
-<!--<br>-->
-
-<!--<form th:action="@{/logout}" method="post">-->
-<!--    <input type="submit" value="logout"/>-->
-<!--</form>-->
-
-<!--</body>-->
-<!--</html>-->
